--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -7,7 +7,7 @@
 header,
 footer {
     width: 100%;
-    height: 120px;
+    height: 150px;
     background-color: rgb(48, 12, 125, 0.966);
     color: white;
 }
@@ -16,6 +16,8 @@ footer {
 h1,
 h2 {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -36,6 +38,8 @@ ul {
 
 
 p {
+    padding-left: 10%;
+    padding-right: 10%;
     text-align: center;
     font-size: 25px;
     font-style: italic;
